--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(ament_cmake REQUIRED)
 
 
 
-add_library(${PROJECT_NAME} SHARED src/encoder_interface.cpp src/main.cpp)
+add_library(${PROJECT_NAME} src/encoder_interface.cpp src/main.cpp)
 
 find_package(Boost REQUIRED COMPONENTS log log_setup thread system filesystem)
 target_link_libraries(${PROJECT_NAME}  Boost::log Boost::log_setup Boost::thread Boost::system Boost::filesystem pthread)
@@ -19,4 +19,4 @@ target_link_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inclu
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/SerialCAN/Includes/)
 
 
-install(TARGETS ${PROJECT_NAME} DESTINATION lib/${PROJECT_NAME})
+install(TARGETS ${PROJECT_NAME} DESTINATION lib)
