--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -18,5 +18,9 @@ target_link_libraries(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include/Serial
 target_link_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/SerialCAN/Binaries)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/SerialCAN/Includes/)
 
+target_link_libraries(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include/SLCAN/Binaries/libslcan.a)
+target_link_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/SLCAN/Binaries)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/SLCAN/Includes/)
+
 
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
